<resources>
    <string name="app_name">Minesweeper</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="_000">000</string>
    <string name="unrevealed_mine">unrevealed mine</string>
    <string name="hint">HINT</string>
    <string name="time">time</string>

    <string name="back">back</string>
    <string name="flex">flex</string>
    <string name="quick">quick</string>
    <string name="others">others</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="defaulted">defaulted</string>

    <string name="click_the_circle">click the circle</string>
    <string name="welcome_to_minesweeper">welcome to minesweeper</string>
    <string name="catoon">catoon</string>
    <string name="mountain">mountain</string>
    <string name="undersea">undersea</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="background_music">Background Music</string>
    <string name="game_level">Game Level</string>
    <string name="hint_number">Hint Number</string>
    <string name="title_activity_ranking">ranking</string>
    <string name="action_settings">Settings</string>


</resources>
