<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jingluo.minesweeper.MainActivity"
    >

    <ImageView
        android:id="@+id/backgroundimage"
        android:layout_width="0dp"
        android:layout_height="495dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
      >

    </ImageView>
    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp" />

    <GridView
        android:id="@+id/minegrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:numColumns="9"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:gravity="center"
        android:background="#696969"

        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/timer" />



    <TextView
        android:id="@+id/numofmine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_000"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/unrevealedmine"
        android:layout_marginRight="62dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="62dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_000"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/time"
        android:layout_marginLeft="62dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="62dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/expression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/defaultexpression"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/start"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/reset"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="36dp"
        android:layout_height="20dp"
        android:text="@string/time"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/start"
        android:layout_marginLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="60dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/unrevealedmine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unrevealed_mine"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/reset"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/hint"
        android:layout_width="72dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/hint"
        android:textSize="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <Button
        android:id="@+id/back"
        android:layout_width="72dp"
        android:layout_height="35dp"
        android:text="@string/back"
        android:textSize="8sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint" />

</android.support.constraint.ConstraintLayout>
